--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,14 +16,26 @@ jobs:
       matrix:
         node-version: [10.x, 12.x, 14.x, 16.x, 18.x]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Setup JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Run Tests
-        run: bash ./gradlew test --stacktrace  
+    - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
+    - run: echo "This job is running on a ${{ runner.os }} server hosted by GitHub!"
+    - uses: actions/checkout@v3
+    - run: echo "The ${{ github.repository }} repository has been cloned."
+    - run: echo "Setting up JDK" 
+    - name: set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
+    - run: echo "The workflow is now ready to test your code."
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - run: echo "Building Debug APK."  
+    - name: Build with Gradle
+      run: ./gradlew build
+    - run: echo "Build status report=${{ job.status }}."
+    - name: Run Tests
+      run: bash ./gradlew test --stacktrace  
   apk:
     name: Generate APK
     needs: test
