--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,9 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-        cache: gradle
     - run: echo "The workflow is now ready to test your code."
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x ./gradlew
     - run: echo "Building Debug APK."  
     - name: Build with Gradle
       run: ./gradlew build
