--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,8 @@ jobs:
         distribution: 'temurin'
     - run: echo "The workflow is now ready to test your code."
     - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
+      run: chmod +x gradle
     - run: echo "Building Debug APK."  
     - name: Build with Gradle
-      run: ./gradlew build
+      run: gradle build
     - run: echo "Build status report=${{ job.status }}."
