--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,11 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - run: echo "The workflow is now ready to test your code."
+    - name: Look for gradlew
+      run: find / -type f -name "gradlew"
     - name: Grant execute permission for gradlew
-      run: chmod +x gradle
+      run: chmod +x ./gradlew
     - run: echo "Building Debug APK."  
     - name: Build with Gradle
-      run: gradle build
+      run: ./gradlew build
     - run: echo "Build status report=${{ job.status }}."
