--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,8 +29,8 @@ jobs:
         arguments: build
     - name: Build Debug APK
       run: ./gradlew assembleDebug
-    - name: Releasing using Hub
-      uses: ShaunLWM/action-release-debugapk@master
+    - name: Build & Publish Debug APK
+      uses: ShaunLWM/action-release-debugapk@0.0.7
       env:
        GITHUB_TOKEN: ${{ secrets.TOKEN }}
        APP_FOLDER: app
