--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:'
     implementation 'androidx.activity:activity-compose:'
     implementation("io.coil-kt:coil-compose:2.2.2")
+    implementation("androidx.core:core-splashscreen:1.0.1")
+
 
 
     //navigation
