--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -67,12 +68,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:'
     implementation 'androidx.activity:activity-compose:'
     implementation("io.coil-kt:coil-compose:2.2.2")
+    implementation platform('com.google.firebase:firebase-bom:32.2.2')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation("androidx.core:core-splashscreen:1.0.1")
 
 
 
     //navigation
-    implementation("androidx.navigation:navigation-compose:2.6.0")
+    implementation("androidx.navigation:navigation-compose:2.7.0")
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
