--- a/core/build.gradle
+++ b/core/build.gradle
@@ -39,7 +39,7 @@ android {
 dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation "io.insert-koin:koin-android:3.4.2"
-    implementation("androidx.core:core-splashscreen:1.0.1")
+    api("androidx.startup:startup-runtime:1.1.1")
 
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
