--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+
 }
 
 android {
@@ -68,11 +70,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:'
     implementation 'androidx.activity:activity-compose:'
     implementation("io.coil-kt:coil-compose:2.2.2")
+
     implementation platform('com.google.firebase:firebase-bom:32.2.2')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation platform('com.google.firebase:firebase-bom:32.1.0')
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
     implementation("androidx.core:core-splashscreen:1.0.1")
-
-
 
     //navigation
     implementation("androidx.navigation:navigation-compose:2.7.0")
@@ -96,7 +101,6 @@ dependencies {
     testImplementation("io.insert-koin:koin-test-junit5:3.1.6")
     testImplementation "android.arch.core:core-testing:1.1.1"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
-
 
 
 }
